日本語フォント対応

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -139,7 +139,7 @@ if (html !== null) {
 
 			& :global(pre > code),
 			& :global(pre > code *) {
-				font-family: "Source Code Pro", monospace;
+				font-family: "Source Code Pro", "Noto Sans JP", monospace;
 				tab-size: 4;
 				-moz-tab-size: 4;
 				font-size: 13px;
