--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -46,6 +46,7 @@ if (html !== null) {
 							width={size}
 							height={size}
 							alt={`${tag.name}のアイコン`}
+							transition:name={`${post.id}-image`}
 						/>
 						<span class="post-tag-name">{tag.name}</span>
 					</div>
