--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -28,7 +28,15 @@ if (html !== null) {
 
 <div class="post-info">
 	<h2 class="post-title">{post.title}</h2>
-	{post.thumbnail !== undefined && <img class="post-thumbnail" src={`${post.thumbnail.url}?fm=webp&w=800`} />}
+	{
+		post.thumbnail !== undefined && (
+			<img
+				class="post-thumbnail"
+				src={`${post.thumbnail.url}?fm=webp&w=800`}
+				transition:name={`${post.id}-image`}
+			/>
+		)
+	}
 </div>
 
 <div class="post-head">
@@ -46,7 +54,6 @@ if (html !== null) {
 							width={size}
 							height={size}
 							alt={`${tag.name}のアイコン`}
-							transition:name={`${post.id}-image`}
 						/>
 						<span class="post-tag-name">{tag.name}</span>
 					</div>
