--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import SnsIcon from "@/components/SnsIcon.astro";
 ---
 
-<footer>
+<footer transition:name="footer">
 	<span id="copy">Created by 彩季</span>
 	<div class="footer-link">
 		<SnsIcon file="twitter" name="Twitter" href="https://twitter.com/Akime_Aki" />
