--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header transition:name="header">
+<header>
 	<div id="title-wrap">
 		<a id="title-link" href="/">
 			<h1 id="title">孅いエンジニアブログ</h1>
