--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ interface Props {
 	title?: string;
 	ogType?: string;
 	description?: string;
-	ogImage?: string;
+	ogImage?: string | undefined;
 	notFound?: boolean;
 }
 
