--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -203,3 +203,22 @@ if (html !== null) {
 		}
 	}
 </style>
+
+<style is:global>
+	.iframely-responsive {
+		position: relative;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 0;
+		padding-bottom: 56.25%;
+	}
+	.iframely-responsive > * {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border: 0;
+	}
+</style>
