フォーマット

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,7 +13,7 @@ import Layout from "@/layouts/Layout.astro";
 		display: flex;
 		flex-direction: column;
 		gap: 20px;
-		width:: 100%;
+		width: 100%;
 		max-width: 1000px;
 		margin: 0 auto;
 	}
