--- a/src/pages/_policy.astro
+++ b/src/pages/_policy.astro
@@ -6,21 +6,24 @@ import Layout from "@/layouts/Layout.astro";
 	<div id="contents">
 		<h2>広告について</h2>
 		<p>
-			当サイトでは、第三者配信の広告サービス「Google Adsense」を利用していて、過去にユーザーがアクセスした際の情報を元に興味に応じた商品やサービスの広告を表示するため、Cookieを使用してます。
+			当サイトでは、第三者配信の広告サービス「Google
+			Adsense」を利用していて、過去にユーザーがアクセスした際の情報を元に興味に応じた商品やサービスの広告を表示するため、Cookieを使用してます。
 		</p>
 		<p>
 			Cookieを使用することで、当サイトはユーザーのコンピュータを識別できるようになりますが、個人を特定できるものではありません。
 		</p>
 		<p>
-			Cookieを無効にする方法やGoogle Adsenseに関する詳細は「<a href="https://policies.google.com/technologies/ads?gl=jp" target="_blank">広告 – ポリシーと規約 – Google</a>」を確認してください。
+			Cookieを無効にする方法やGoogle Adsenseに関する詳細は「<a
+				href="https://policies.google.com/technologies/ads?gl=jp"
+				target="_blank">広告 – ポリシーと規約 – Google</a
+			>」を確認してください。
 		</p>
 		<p>「<a href="https://www.google.com/settings/ads" target="_blank">広告設定</a>」とかで無効化できます。</p>
 		<h2>アクセス解析ツールについて</h2>
+		<p>当サイトでは、Googleによるアクセス解析ツール「Google アナリティクス」を利用しています。</p>
 		<p>
-			当サイトでは、Googleによるアクセス解析ツール「Google アナリティクス」を利用しています。
-		</p>
-		<p>
-			Google アナリティクスはトラフィックデータの収集のためにCookieを使用してます。トラフィックデータは匿名で収集されていて、個人を特定するものではないです。この機能はCookieを無効にすることで収集を拒否することが出来るので、使っているブラウザの設定を確認してください。
+			Google
+			アナリティクスはトラフィックデータの収集のためにCookieを使用してます。トラフィックデータは匿名で収集されていて、個人を特定するものではないです。この機能はCookieを無効にすることで収集を拒否することが出来るので、使っているブラウザの設定を確認してください。
 		</p>
 
 		<h2>免責事項</h2>
@@ -44,7 +47,7 @@ import Layout from "@/layouts/Layout.astro";
 		display: flex;
 		flex-direction: column;
 		gap: 20px;
-		width:: 100%;
+		width: 100%;
 		max-width: 1000px;
 		margin: 0 auto;
 	}
