--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,10 +7,7 @@
 	<nav>
 		<a class="header-nav-link" href="https://twitter.com/Akime_Aki" target="_blank">X / Twitter</a>
 		<a class="header-nav-link" href="https://github.com/AkimeAki" target="_blank">GitHub</a>
-		<a class="header-nav-link" href="https://coffee.aki.wtf" target="_blank" data-link="ai-bg">
-			AIが背景画像を<br />生成するブログ
-		</a>
-		<!-- <a class="header-nav-link" href="/" target="_blank"><s>作ったもの</s></a> -->
+		<a class="header-nav-link" href="https://aki.wtf" target="_blank"> ポートフォリオ</a>
 	</nav>
 </header>
 
