--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,7 +109,7 @@ const posts = await getListAllContents<Blog>("blogs");
 				font-size: 15px;
 				background-color: #a3a3a3;
 				color: white;
-				padding: 2px 5px;
+				padding: 5px;
 
 				@media (prefers-color-scheme: dark) {
 					background-color: #202020;
@@ -118,6 +118,7 @@ const posts = await getListAllContents<Blog>("blogs");
 
 			.post-title {
 				font-size: 15px;
+				line-height: 1.6;
 
 				@media (prefers-color-scheme: dark) {
 					color: white;
