--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@
 <style lang="scss">
 	header {
 		text-align: center;
-		background-color: #ed5841;
+		background-color: #f0425a;
 
 		@media (prefers-color-scheme: dark) {
 			background-color: #216135;
