スタイル調整

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -144,7 +144,7 @@ const contents = body !== null ? body.innerHTML : "";
 			gap: 30px;
 
 			& :global(a) {
-				color: #9deb83;
+				color: #07a715;
 
 				@media (prefers-color-scheme: dark) {
 					color: #9deb83;
