スタイル調整

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -123,6 +123,7 @@ const contents = body !== null ? body.innerHTML : "";
 				.post-tag-icon {
 					border-radius: 9999px;
 					width: 25px;
+					height: auto;
 					background-color: #dfdfdf;
 				}
 
