--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,23 @@
 			<h1 id="title">孅いエンジニアブログ</h1>
 		</a>
 	</div>
+	<nav>
+		<a href="https://aki.wtf" target="_blank">aki.wtf</a>
+		<a href="/categories/allergy-navi"
+			>アレルギーナビ{" "}
+			<br class="br-allergy-navi" />
+			アプデ情報</a
+		>
+	</nav>
 </header>
 
 <style lang="scss">
+	.br-allergy-navi {
+		@media (min-width: 600px) {
+			display: none;
+		}
+	}
+
 	header {
 		text-align: center;
 		background-color: #f0425a;
@@ -28,6 +42,37 @@
 					font-size: 23px;
 					font-weight: bold;
 					color: white;
+				}
+			}
+		}
+
+		nav {
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+
+			background-color: #f0425a;
+
+			@media (prefers-color-scheme: dark) {
+				background-color: #216135;
+			}
+
+			a {
+				display: block;
+				padding: 15px 0;
+				color: white;
+				width: 100%;
+				text-align: center;
+				font-weight: bold;
+				font-size: 15px;
+
+				&:hover {
+					background-color: #82ef92;
+					color: inherit;
+
+					@media (prefers-color-scheme: dark) {
+						background-color: #572229;
+					}
 				}
 			}
 		}
