--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -94,6 +94,10 @@ const contents = body !== null ? body.innerHTML : "";
 			width: 100%;
 			max-width: 1000px;
 			padding: 50px 0;
+			word-wrap: break-word;
+			overflow-wrap: anywhere;
+			word-break: break-word;
+			word-break: auto-phrase;
 		}
 
 		.post-thumbnail {
