--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,17 +6,17 @@
 	</div>
 	<nav>
 		<a href="https://aki.wtf" target="_blank">aki.wtf</a>
-		<a href="/categories/allergy-navi"
-			>アレルギーナビ{" "}
+		<a href="/categories/allergy-navi">
+			アレルギーナビ{" "}
 			<br class="br-allergy-navi" />
-			アプデ情報</a
-		>
+			アプデ情報
+		</a>
 	</nav>
 </header>
 
 <style lang="scss">
 	.br-allergy-navi {
-		@media (min-width: 600px) {
+		@media (min-width: 601px) {
 			display: none;
 		}
 	}
