--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,14 @@ import SnsIcon from "@/components/SnsIcon.astro";
 <footer>
 	<span id="copy">Created by <a href="https://aki.wtf" target="_blank">彩季</a></span>
 	<div class="footer-link">
-		<SnsIcon file="twitter" name="Twitter" href="https://twitter.com/Akime_Aki" />
-		<SnsIcon file="x" name="X" href="https://x.com/Akime_Aki" />
-		<SnsIcon file="youtube" name="YouTube" href="https://www.youtube.com/channel/UCHV3Taosn76pn9_ip1u7Zkg" />
+		<SnsIcon file="twitter" name="Twitter" href="https://twitter.com/Akime_Aki" loading="lazy" />
+		<SnsIcon file="x" name="X" href="https://x.com/Akime_Aki" loading="lazy" />
+		<SnsIcon
+			file="youtube"
+			name="YouTube"
+			href="https://www.youtube.com/channel/UCHV3Taosn76pn9_ip1u7Zkg"
+			loading="lazy"
+		/>
 	</div>
 </footer>
 
